fix: arreglos de index.ts y tags de swagger para recetas
