# src/routes/recetas.routes.ts
@@ -9,10 +9,10 @@ import {
 
 const router = Router();
 
-router.get("/", getRecetas);
-router.get("/:id", getRecetaById);
-router.post("/", postReceta);
-router.put("/:id", putReceta);
-router.delete("/:id", deleteReceta);
+router.get("/", getRecetas /* #swagger.tags = ['Recetas'] #swagger.summary = 'Ver todas las recetas' */);
+router.get("/:id", getRecetaById /* #swagger.tags = ['Recetas'] #swagger.summary = 'Ver una receta por ID' */);
+router.post("/", postReceta /* #swagger.tags = ['Recetas'] #swagger.summary = 'Crear una nueva receta' */);
+router.put("/:id", putReceta /* #swagger.tags = ['Recetas'] #swagger.summary = 'Actualizar una receta' */);
+router.delete("/:id", deleteReceta /* #swagger.tags = ['Recetas'] #swagger.summary = 'Eliminar una receta' */);
 
 export default router;
