# swagger-output.json
@@ -11,8 +11,12 @@
     "http"
   ],
   "paths": {
-    "/pacientes": {
+    "/pacientes/": {
       "get": {
+        "tags": [
+          "Pacientes"
+        ],
+        "summary": "Ver todos los Pacientes",
         "description": "",
         "responses": {
           "200": {
@@ -24,6 +28,10 @@
         }
       },
       "post": {
+        "tags": [
+          "Pacientes"
+        ],
+        "summary": "Crear un nuevo Paciente",
         "description": "",
         "parameters": [
           {
@@ -52,8 +60,8 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "201": {
+            "description": "Created"
           },
           "400": {
             "description": "Bad Request"
@@ -66,6 +74,10 @@
     },
     "/pacientes/{id}": {
       "get": {
+        "tags": [
+          "Pacientes"
+        ],
+        "summary": "Ver todos los Pacientes por ID",
         "description": "",
         "parameters": [
           {
@@ -82,15 +94,16 @@
           "400": {
             "description": "Bad Request"
           },
-          "404": {
-            "description": "Not Found"
-          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       },
       "put": {
+        "tags": [
+          "Pacientes"
+        ],
+        "summary": "Actualizar un Paciente",
         "description": "",
         "parameters": [
           {
@@ -98,35 +111,11 @@
             "in": "path",
             "required": true,
             "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "nombre": {
-                  "example": "any"
-                },
-                "apellidos": {
-                  "example": "any"
-                },
-                "edad": {
-                  "example": "any"
-                },
-                "telefono": {
-                  "example": "any"
-                },
-                "seguro_medico": {
-                  "example": "any"
-                }
-              }
-            }
           }
         ],
         "responses": {
-          "202": {
-            "description": "Accepted"
+          "200": {
+            "description": "OK"
           },
           "400": {
             "description": "Bad Request"
@@ -140,6 +129,10 @@
         }
       },
       "delete": {
+        "tags": [
+          "Pacientes"
+        ],
+        "summary": "Eliminar un Paciente",
         "description": "",
         "parameters": [
           {
@@ -156,6 +149,9 @@
           "400": {
             "description": "Bad Request"
           },
+          "404": {
+            "description": "Not Found"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -164,6 +160,10 @@
     },
     "/recetas/": {
       "get": {
+        "tags": [
+          "Recetas"
+        ],
+        "summary": "Ver todas las recetas",
         "description": "",
         "parameters": [
           {
@@ -182,6 +182,10 @@
         }
       },
       "post": {
+        "tags": [
+          "Recetas"
+        ],
+        "summary": "Crear una nueva receta",
         "description": "",
         "parameters": [
           {
@@ -221,6 +225,10 @@
     },
     "/recetas/{id}": {
       "get": {
+        "tags": [
+          "Recetas"
+        ],
+        "summary": "Ver una receta por ID",
         "description": "",
         "parameters": [
           {
@@ -246,6 +254,10 @@
         }
       },
       "put": {
+        "tags": [
+          "Recetas"
+        ],
+        "summary": "Actualizar una receta",
         "description": "",
         "parameters": [
           {
@@ -286,6 +298,10 @@
         }
       },
       "delete": {
+        "tags": [
+          "Recetas"
+        ],
+        "summary": "Eliminar una receta",
         "description": "",
         "parameters": [
           {
@@ -450,35 +466,10 @@
             "description": "Internal Server Error"
           }
         }
-      }
-    },
-    "/citas/fecha": {
-      "get": {
+      },
+      "post": {
         "description": "",
         "parameters": [
-          {
-            "name": "fecha_hora",
-            "in": "query",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/citas/{id}": {
-      "put": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
           {
             "name": "body",
             "in": "body",
@@ -505,8 +496,54 @@
           }
         ],
         "responses": {
-          "202": {
-            "description": "Accepted"
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/citas/{id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           },
           "400": {
             "description": "Bad Request"
@@ -529,6 +566,25 @@
             "type": "string"
           }
         ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/citas/fecha": {
+      "get": {
+        "description": "",
         "responses": {
           "200": {
             "description": "OK"
